syntax = "proto3";

package notification;

service NotificationService {
    rpc SendMail (EmailSchedule) returns (ScheduledMessage) {}
}

message EmailSchedule {
    string recipient = 1;
    string subject = 2;
    string content =3;
    string date =4;
}

message ScheduledMessage {
    string result = 1;
}